Introduced model loading system to amke simulation extendable
